[package]
name = "flycheck-gtk-tip"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
emacs = "0.21.0"
gtk = { version = "0.18.2", features = ["v3_24"] }
gtk-sys = {version = "0.18.2"}
cairo-rs = "0.18.0"
pango = "0.18.0"
pangocairo = {version = "0.18"}
async-channel = "2.5.0"